completed project section and styling

--- a/src/components/data/projects.json
+++ b/src/components/data/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "Cosmic Quest",
     "imageSrc": "projects/cosmicQuest.png",
-    "description": "Text-based Scifi Video game using restful API.",
+    "description": "Text-based Scifi Video game using restful API. Featuring background audio and text-to-speech audio.",
     "skills": ["MongoDB", "Express", "React", "Node"],
     "demo": "https://cosmic-quest.onrender.com/",
     "source": "https://github.com/mandi7469/Cosmic-Quest"
@@ -16,9 +16,9 @@
     "source": "https://github.com/mandi7469/Shelfie"
   },
   {
-    "title": "SVG Logo Maker",
-    "imageSrc": "projects/svg.png",
-    "description": "A command-line application that takes in user input to generate a logo and save it as an SVG file.",
+    "title": "Logo Maker",
+    "imageSrc": "projects/logoMaker.png",
+    "description": "A command-line application that takes in user input to generate a logo and save it as an SVG file. Walkthrough video linked to demonstrate its functionality.",
     "skills": ["Node", "JavaScript", "Inquirer"],
     "demo": "https://drive.google.com/file/d/1jgl9_uwQXjhocPaFKiaU2EMhKSNe1saS/view?usp=sharing",
     "source": "https://github.com/mandi7469/SVG-Logo-Maker"
@@ -26,7 +26,7 @@
   {
     "title": "Personal Blog",
     "imageSrc": "projects/personalBlog.png",
-    "description": "Two-page website where users can input and veiw blog posts. It includes a content form, dynamically rendered blog posts, and a light/dark toggle mode.",
+    "description": "Two-page website where users can input and veiw blog posts. Featuring a light/dark toggle mode.",
     "skills": ["HTML", "JavaScript", "CSS"],
     "demo": "https://mandi7469.github.io/Personal-Blog/",
     "source": "https://github.com/mandi7469/Personal-Blog"
@@ -34,7 +34,7 @@
   {
     "title": "Task Board",
     "imageSrc": "projects/taskBoard.png",
-    "description": "An application that allows users to manage and delete tasks.",
+    "description": "An application that allows users to manage, drag and delete tasks. Featuring status color changing. ",
     "skills": ["JQuery", "JavaScript", "HTML", "CSS"],
     "demo": "https://mandi7469.github.io/Task-Board/",
     "source": "https://github.com/mandi7469/Task-Board"
@@ -42,7 +42,7 @@
   {
     "title": "Employee Tracker",
     "imageSrc": "projects/employeeTracker.png",
-    "description": "A command-line application to manage a company's employee database.",
+    "description": "A command-line application to manage a company's employee database. Walkthrough video linked to demonstrate its functionality.",
     "skills": ["Node", "PostgreSQL", "Inquirer"],
     "demo": "https://drive.google.com/file/d/1coPUpQGTgcaYGv6AJaD5MF0DFNtYHn3U/view?usp=sharing",
     "source": "https://github.com/mandi7469/SQL-Employee-Tracker"
